adding color to the number of donors

--- a/fund.html
+++ b/fund.html
@@ -15,7 +15,7 @@
     
     <section>
         <div class="update_donation">$<span id="amount">500</span> still needed for this project</div>
-        <div class="outer">
+        <div class="outer_box">
           <div class="progress_bar">
             <div class="progress_done"></div>
           </div>
@@ -24,7 +24,7 @@
             <p>Join the <span id="donors">0</span> other donors who have already supported this project. Every dollar helps.</p>
             <input type="text" class="input_box" value="0" min="0">
             <button class="give"> Give Now</button>
-            <p>Why give $<span id="question">0</span></p>
+            <p>Why give $<span id="question"></span></p>
        </article>
     </div>
     <div class="static_button">
