--- a/fund.html
+++ b/fund.html
@@ -22,7 +22,7 @@
        <article>
             <header><span>Only 3 days left</span> to fund this project.</header>
             <p>Join the <span id="donors">0</span> other donors who have already supported this project. Every dollar helps.</p>
-            <input type="text" class="input_box" value="0" min="0">
+            <input type="text" class="input_box" min="0">
             <button class="give"> Give Now</button>
             <p>Why give $<span id="question"></span></p>
        </article>
