adding more logic for input value if user enter an amount of 0$

--- a/fund.html
+++ b/fund.html
@@ -22,14 +22,16 @@
        <article>
             <header><span>Only 3 days left</span> to fund this project.</header>
             <p>Join the <span id="donors">0</span> other donors who have already supported this project. Every dollar helps.</p>
-            <input type="text" class="input_box" min="0">
+            <input type="text" class="input_box">
             <button class="give"> Give Now</button>
             <p>Why give $<span id="question"></span></p>
        </article>
     </div>
     <div class="static_button">
-        <div class="static"> Save for later</div>
-        <div class="static"> Tell your friends</div>
+        <input type="button" class="static" value="Save for later">
+        <input type="button" class="static" value="Tell your friends">
+        <!-- <div class="static"> Save for later</div>
+        <div class="static"> Tell your friends</div> -->
     </div>
     </section>
     
